# Opengl_learn

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt
shaders/: frag.glsl  vert.glsl
src/: glm_main.cpp  glm_main2.cpp  glm_main3.cpp  main.cpp
